--- a/checkout.html
+++ b/checkout.html
@@ -576,9 +576,8 @@
 													получении заказа.
 												</p>
 												<p>
-													Доставка в регионы осуществляется EMS Почтой России
-													(в течение 5-14 дней) и курьерской службой DPD (в течение
-													3-5 дней) с момента передачи заказа в службу доставки.
+													Доставка в регионы осуществляется почтой России
+													(в течение 2-5 дней) и курьерской службой с момента передачи заказа в службу доставки.
 													Стоимость зависит от веса заказа и расстояния. В некоторые
 													регионы доставка возможна только посредством EMS Почты
 													России, способ доставки уточняйте у оператора при
