--- a/checkout.html
+++ b/checkout.html
@@ -481,8 +481,7 @@
 
 												<p>
 													* Интернет-магазин не несет ответственности за задержку
-													доставки заказа, связанную с работой курьерских служб DPD
-													и EMS Почты России.
+													доставки заказа, связанную с работой курьерских служб и почты.
 												</p>
 											</div>
 										</div>
