--- a/checkout.html
+++ b/checkout.html
@@ -575,17 +575,15 @@
 													получении заказа.
 												</p>
 												<p>
-													Доставка в регионы осуществляется почтой России
+													Доставка в регионы осуществляется почтой 
 													(в течение 2-5 дней) и курьерской службой с момента передачи заказа в службу доставки.
 													Стоимость зависит от веса заказа и расстояния. В некоторые
-													регионы доставка возможна только посредством EMS Почты
-													России, способ доставки уточняйте у оператора при
+													регионы доставка возможна только посредством почты, способ доставки уточняйте у оператора при
 													оформлении заказа*.
 												</p>
 												<p>
 													* Интернет-магазин не несет ответственности за задержку
-													доставки заказа, связанную с работой курьерских служб DPD
-													и EMS Почты России.
+													доставки заказа, связанную с работой курьерских служб и почты.
 												</p>
 											</div>
 										</div>
